Fixed usage info in man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -4,6 +4,7 @@ sxiv \- Simple (or small or suckless) X Image Viewer
 .SH SYNOPSIS
 .B sxiv
 .RB [ \-hv ]
+.B FILES...
 .SH DESCRIPTION
 sxiv is a simple image viewer for X. It only has the most basic features
 required for fast image viewing.
