Nicer man page homepage section

--- a/sxiv.1
+++ b/sxiv.1
@@ -72,8 +72,7 @@ Toggle fullscreen mode.
 .SH AUTHORS
 .TP
 Bert Muennich <ber.t at gmx.com>
-.SH MISC
-.SS Homepage
+.SH HOMEPAGE
 .TP
 http://github.com/muennich/sxiv
 .SH SEE ALSO
