Added <,> mappings to rotate image

--- a/sxiv.1
+++ b/sxiv.1
@@ -65,6 +65,13 @@ Pan up.
 .TP
 .B l
 Pan right.
+.SS Rotation
+.TP
+.B <
+Rotate image counter-clockwise by 90 degrees.
+.TP
+.B >
+Rotate image clockwise by 90 degrees.
 .SS Control window
 .TP
 .B f
