Added a key-mapping for toggle anti-aliasing

--- a/sxiv.1
+++ b/sxiv.1
@@ -76,6 +76,10 @@ Rotate image clockwise by 90 degrees.
 .TP
 .B f
 Toggle fullscreen mode.
+.SS Miscellaneous
+.TP
+.B a
+Toggle anti-aliasing.
 .SH AUTHORS
 .TP
 Bert Muennich <ber.t at gmx.com>
