Complete mouse support

--- a/sxiv.1
+++ b/sxiv.1
@@ -26,7 +26,7 @@ Quit sxiv.
 .TP
 .B Escape
 Quit sxiv and return an exit value of 2.
-.SS Navigate image list 
+.SS Navigate image list
 .TP
 .BR Space ", " n
 Go to the next image.
@@ -80,6 +80,34 @@ Toggle fullscreen mode.
 .TP
 .B a
 Toggle anti-aliasing.
+.SH MOUSE COMMANDS
+.SS Navigate image list
+.TP
+.B Button1
+Go to the next image.
+.TP
+.B Button3
+Go to the previous image.
+.SS Zooming
+.TP
+.B Ctrl+ScrollUp
+Zoom in.
+.TP
+.B Ctrl+ScrollDown
+Zoom out.
+.SS Panning
+.TP
+.B ScrollUp
+Pan up.
+.TP
+.B ScrollDown
+Pan down.
+.TP
+.B Shift+ScrollUp
+Pan left.
+.TP
+.B Shift+ScrollDown
+Pan right.
 .SH AUTHORS
 .TP
 Bert Muennich <ber.t at gmx.com>
@@ -87,4 +115,5 @@ Bert Muennich <ber.t at gmx.com>
 .TP
 http://github.com/muennich/sxiv
 .SH SEE ALSO
-.BR feh (1), qiv (1)
+.BR feh (1),
+.BR qiv (1)
