--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 - add some useful command line options
+- key mappings for fit image to window and vice versa
 - view all images in directories (recursive mode)
