Updated section AUTHORS of man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -109,8 +109,10 @@ Pan left.
 .B Shift+ScrollDown
 Pan right.
 .SH AUTHORS
-.TP
+.EX
 Bert Muennich <ber.t at gmx.com>
+Dave Reisner  <d at falconindy.com>
+.EE
 .SH HOMEPAGE
 .TP
 http://github.com/muennich/sxiv
