Map arrow keys to h/j/k/l

--- a/sxiv.1
+++ b/sxiv.1
@@ -63,10 +63,10 @@ Quit sxiv.
 Quit sxiv and return an exit value of 2.
 .SS Navigate image list
 .TP
-.BR Space ", " n
+.BR n ", " Space
 Go to the next image.
 .TP
-.BR Backspace ", " p
+.BR p ", " Backspace
 Go to the previous image.
 .TP
 .B g
@@ -89,16 +89,16 @@ Zoom in.
 Zoom out.
 .SS Panning
 .TP
-.B h
+.BR h ", " Left
 Pan left.
 .TP
-.B j
+.BR j ", " Down
 Pan down.
 .TP
-.B k
+.BR k ", " Up
 Pan up.
 .TP
-.B l
+.BR l ", " Right
 Pan right.
 .SS Rotation
 .TP
