TODO: set wallpaper

--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 - key mappings for fit image to window and vice versa
+- set wallpaper (display on root)
 - view all images in directories (recursive mode)
