Explicitly enable printing of warnings

--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple (or small or suckless) X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-dfhpsvZ ]
+.RB [ \-dfhpsvWZ ]
 .RB [ \-w
 .IB WIDTH x HEIGHT
 ]
@@ -35,6 +35,9 @@ Scale all images to fit into window.
 .TP
 .B \-v
 Print version information to standard output and exit.
+.TP
+.B \-W
+Enable printing of warnings to standard error stream.
 .TP
 .BI "\-w " WIDTH x HEIGHT
 Set window width to
