--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 - key mappings for fit image to window and vice versa
+- update filelist if image is removed or renamed while running
 - view all images in directories (recursive mode)
