New key command: r, reload image

--- a/sxiv.1
+++ b/sxiv.1
@@ -112,6 +112,9 @@ Toggle fullscreen mode.
 .TP
 .B a
 Toggle anti-aliasing.
+.TP
+.B r
+Reload image.
 .SH MOUSE COMMANDS
 .SS Navigate image list
 .TP
