--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple (or small or suckless) X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-dfhpqsvZ ]
+.RB [ \-dFfhpqsvZ ]
 .RB [ \-g
 .IR GEOMETRY ]
 .RB [ \-z
@@ -19,6 +19,10 @@ manager.
 .TP
 .B \-d
 Scale all images to 100%, but fit large images into window.
+.TP
+.B \-F
+Make the window fixed/floating by setting the minimum and maximum width/height
+size-hints to the window width/height.
 .TP
 .B \-f
 Start in fullscreen mode.
