New option: -r, open all images in directories

--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple (or small or suckless) X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-dFfhpqsvZ ]
+.RB [ \-dFfhpqrsvZ ]
 .RB [ \-g
 .IR GEOMETRY ]
 .RB [ \-z
@@ -40,6 +40,9 @@ Pixelize images, i.e. turn off anti-aliasing.
 .TP
 .B \-q
 Be quiet, disable warnings to standard error stream.
+.TP
+.B \-r
+Search the given directories recursively for images to view.
 .TP
 .B \-s
 Scale all images to fit into window.
