Updated doc, 0/W/w key-mappings

--- a/sxiv.1
+++ b/sxiv.1
@@ -91,6 +91,12 @@ Zoom in.
 .TP
 .B \-
 Zoom out.
+.TP
+.B 0
+Set zoom level to 100%.
+.TP
+.B w
+Set zoom level to fit image into window.
 .SS Panning
 .TP
 .BR h ", " Left
@@ -112,6 +118,9 @@ Rotate image counter-clockwise by 90 degrees.
 .B >
 Rotate image clockwise by 90 degrees.
 .SS Control window
+.TP
+.B W
+Resize window to fit image.
 .TP
 .B f
 Toggle fullscreen mode.
