New author in man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -166,6 +166,7 @@ Pan right.
 .EX
 Bert Muennich <ber.t at gmx.com>
 Dave Reisner  <d at falconindy.com>
+Fung SzeTat   <sthorde at gmail.com>
 .EE
 .SH HOMEPAGE
 .TP
