Updated man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -13,6 +13,13 @@ sxiv \- Simple (or small or suckless) X Image Viewer
 sxiv is a simple image viewer for X. It only has the most basic features
 required for fast image viewing.
 .P
+sxiv opens all named
+.IR FILE s,
+or reads the names of the files to open from standard input, if only a single
+hyphen\-minus
+.RB ( \- )
+is given.
+.P
 Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
 manager.
 .SH OPTIONS
