--- a/sxiv.1
+++ b/sxiv.1
@@ -146,6 +146,9 @@ Toggle fullscreen mode.
 .B a
 Toggle anti-aliasing.
 .TP
+.B A
+Toggle visibility of alpha-channel, i.e. image transparency.
+.TP
 .B r
 Reload image.
 .SH MOUSE COMMANDS
