--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple (or small or suckless) X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-adFfhpqrstvZ ]
+.RB [ \-aCdFfhpqrstvZ ]
 .RB [ \-g
 .IR GEOMETRY ]
 .RB [ \-z
@@ -24,6 +24,9 @@ sxiv has two modes of operation: image and thumbnail mode. The default is image
 mode, in which only the current image is shown. In thumbnail mode a grid of 
 small previews is displayed, making it easy to choose an image to open.
 .P
+sxiv can also cache its thumbnails. Please see the section THUMBNAIL CACHING
+for information on how to enable this feature.
+.P
 Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
 manager.
 .SH OPTIONS
@@ -32,6 +35,9 @@ manager.
 Display all given files, do not filter out unsupported files. This might result
 in a much shorter startup time, when the file list is very long or contains
 large files of slow loadable types, e.g. gif and progressive jpg.
+.TP
+.B \-C
+Remove all orphaned cache files from the thumbnail cache directory and exit.
 .TP
 .B \-d
 Scale all images to 100%, but fit large images into window.
@@ -191,6 +197,23 @@ Pan image left.
 .TP
 .B Shift+ScrollDown
 Pan image right.
+.SH THUMBNAIL CACHING
+To enable thumbnail caching, please make sure to create the directory
+.I ~/.sxiv/
+with write permissions. sxiv will then store all thumbnails inside this
+directory, but it will not create this directory by itself. It rather uses the
+existance of this directory as an affirmation, that the user wants thumbnails
+to be cached.
+.P
+Use the command line option
+.I \-C
+to keep the cache directory clean by removing all orphaned cache files.
+Additionally, run the following command afterwards inside the cache directory
+to remove empty subdirectories:
+.P
+.RS
+find -type d -empty -delete
+.RE
 .SH AUTHORS
 .EX
 Bert Muennich <ber.t at gmx.com>
