--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple (or small or suckless) X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-aCdFfhpqrstvZ ]
+.RB [ \-CdFfhpqrstvZ ]
 .RB [ \-g
 .IR GEOMETRY ]
 .RB [ \-z
@@ -30,11 +30,6 @@ for information on how to enable this feature.
 Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
 manager.
 .SH OPTIONS
-.TP
-.B \-a
-Display all given files, do not filter out unsupported files. This might result
-in a much shorter startup time, when the file list is very long or contains
-large files of slow loadable types, e.g. gif and progressive jpg.
 .TP
 .B \-C
 Remove all orphaned cache files from the thumbnail cache directory and exit.
