--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple (or small or suckless) X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-CdFfhpqrstvZ ]
+.RB [ \-cdFfhpqrstvZ ]
 .RB [ \-g
 .IR GEOMETRY ]
 .RB [ \-z
@@ -31,7 +31,7 @@ Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
 manager.
 .SH OPTIONS
 .TP
-.B \-C
+.B \-c
 Remove all orphaned cache files from the thumbnail cache directory and exit.
 .TP
 .B \-d
@@ -201,7 +201,7 @@ existance of this directory as an affirmation, that the user wants thumbnails
 to be cached.
 .P
 Use the command line option
-.I \-C
+.I \-c
 to keep the cache directory clean by removing all orphaned cache files.
 Additionally, run the following command afterwards inside the cache directory
 to remove empty subdirectories:
