--- a/sxiv.1
+++ b/sxiv.1
@@ -132,6 +132,18 @@ Pan image [move selection] up.
 .TP
 .BR l ", " Right
 Pan image [move selection] right.
+.TP
+.BR H
+Pan to left image edge.
+.TP
+.BR J
+Pan to bottom image edge.
+.TP
+.BR K
+Pan to top image edge.
+.TP
+.BR L
+Pan to right image edge.
 .SS Rotation
 .TP
 .B <
