New option: -n, start at given picture

--- a/sxiv.1
+++ b/sxiv.1
@@ -6,6 +6,8 @@ sxiv \- Simple (or small or suckless) X Image Viewer
 .RB [ \-cdFfhpqrstvZ ]
 .RB [ \-g
 .IR GEOMETRY ]
+.RB [ \-n
+.IR NUM ]
 .RB [ \-z
 .IR ZOOM ]
 .IR FILE ...
@@ -48,6 +50,9 @@ Start in fullscreen mode.
 Set window position and size. See section GEOMETRY SPECIFICATIONS of X(7) for
 more information on
 .IR GEOMETRY .
+.TP
+.BI "\-n " NUM
+Start at picture number NUM.
 .TP
 .B \-h
 Print brief usage information to standard output and exit.
