New mappings: ctrl-[hjkl], pan image one window width/height

--- a/sxiv.1
+++ b/sxiv.1
@@ -138,17 +138,29 @@ Pan image [move selection] up.
 .BR l ", " Right
 Pan image [move selection] right.
 .TP
-.BR H
+.B H
 Pan to left image edge.
 .TP
-.BR J
+.B J
 Pan to bottom image edge.
 .TP
-.BR K
+.B K
 Pan to top image edge.
 .TP
-.BR L
+.B L
 Pan to right image edge.
+.TP
+.BR Ctrl-h ", " Ctrl-Left
+Pan image one window width left.
+.TP
+.BR Ctrl-j ", " Ctrl-Down ", " PageDn
+Pan image one window height down.
+.TP
+.BR Ctrl-k ", " Ctrl-Up ", " PageUp
+Pan image one window height up.
+.TP
+.BR Ctrl-l ", " Ctrl-Right
+Pan image one window width right.
 .SS Rotation
 .TP
 .B <
