Major code refactoring
- Configurable key and mouse mappings in config.h
- Put event handling code from main.c into events.[ch]

--- a/sxiv.1
+++ b/sxiv.1
@@ -150,16 +150,16 @@ Pan to top image edge.
 .B L
 Pan to right image edge.
 .TP
-.BR Ctrl-h ", " Ctrl-Left
+.BR {
 Pan image one window width left.
 .TP
-.BR Ctrl-j ", " Ctrl-Down ", " PageDn
+.BR PageDn
 Pan image one window height down.
 .TP
-.BR Ctrl-k ", " Ctrl-Up ", " PageUp
+.BR PageUp
 Pan image one window height up.
 .TP
-.BR Ctrl-l ", " Ctrl-Right
+.BR }
 Pan image one window width right.
 .SS Rotation
 .TP
