Fixed keyboard mappings

--- a/sxiv.1
+++ b/sxiv.1
@@ -150,16 +150,16 @@ Pan to top image edge.
 .B L
 Pan to right image edge.
 .TP
-.BR {
+.BR Ctrl-h ", " Ctrl-Left
 Pan image one window width left.
 .TP
-.BR PageDn
+.BR Ctrl-j ", " Ctrl-Down
 Pan image one window height down.
 .TP
-.BR PageUp
+.BR Ctrl-k ", " Ctrl-Up
 Pan image one window height up.
 .TP
-.BR }
+.BR Ctrl-l ", " Ctrl-Right
 Pan image one window width right.
 .SS Rotation
 .TP
