Fixed hyphen-used-as-minus-sign issues in man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -76,7 +76,7 @@ Start in thumbnail mode.
 Print version information to standard output and exit.
 .TP
 .B \-Z
-The same as `-z 100'.
+The same as `\-z 100'.
 .TP
 .BI "\-z " ZOOM
 Scale all images to the current zoom level, use a zoom level of
@@ -236,7 +236,7 @@ Additionally, run the following command afterwards inside the cache directory
 to remove empty subdirectories:
 .P
 .RS
-find -type d -empty -delete
+find \-type d \-empty \-delete
 .RE
 .SH AUTHORS
 .EX
