--- a/sxiv.1
+++ b/sxiv.1
@@ -111,6 +111,16 @@ Go 10 images backward.
 .TP
 .B ]
 Go 10 images forward.
+.SS Handle multi-frame images
+.TP
+.B Ctrl-n
+Go to the next frame of a multi-frame image.
+.TP
+.B Ctrl-p
+Go to the previous frame of a multi-frame image.
+.TP
+.B Ctrl-Space
+Play/pause animation of a multi-frame image.
 .SS Zooming
 .TP
 .BR + ", " =
