--- a/sxiv.1
+++ b/sxiv.1
@@ -82,35 +82,74 @@ The same as `\-z 100'.
 Scale all images to the current zoom level, use a zoom level of
 .I ZOOM
 at startup.
-.SH KEYBOARD COMMANDS
-The differences of the following key mappings between image view and thumbnail
-mode are denoted via brackets.
-.SS General
+.SH GENERAL KEYBOARD COMMANDS
+The following keyboard commands are available in both image and thumbnail mode:
 .TP
 .B q
 Quit sxiv.
 .TP
 .B Return
-Switch to thumbnail mode [open selected image].
+Switch to thumbnail mode / open selected image in image mode.
+.TP
+.BR 0 \- 9
+Prefix the next command with a number (denoted via
+.IR count ).
+.TP
+.B g
+Go to the first image.
+.TP
+.B G
+Go to the last image, or image number
+.IR count .
+.TP
+.B f
+Toggle fullscreen mode.
+.TP
+.B A
+Toggle visibility of alpha-channel, i.e. image transparency.
+.TP
+.B r
+Reload image.
+.TP
+.B D
+Remove current image from file list and go to next image.
+.SH THUMBNAIL KEYBOARD COMMANDS
+The following keyboard commands are only available in thumbnail mode:
+.TP
+.BR h ", " Left
+Move selection left.
+.TP
+.BR j ", " Down
+Move selection down.
+.TP
+.BR k ", " Up
+Move selection up.
+.TP
+.BR l ", " Right
+Move selection right.
+.SH IMAGE KEYBOARD COMMANDS
+The following keyboard commands are only available in image mode:
 .SS Navigate image list
 .TP
 .BR n ", " Space
-Go to the next image.
+Go
+.I count
+images forward.
 .TP
 .BR p ", " Backspace
-Go to the previous image.
-.TP
-.B g
-Go to [select] the first image.
-.TP
-.B G
-Go to [select] the last image.
+Go
+.I count
+images backward.
 .TP
 .B [
-Go 10 images backward.
+Go
+.I count
+* 10 images backward.
 .TP
 .B ]
-Go 10 images forward.
+Go
+.I count
+* 10 images forward.
 .SS Handle multi-frame images
 .TP
 .B Ctrl-n
@@ -123,30 +162,39 @@ Go to the previous frame of a multi-frame image.
 Play/pause animation of a multi-frame image.
 .SS Zooming
 .TP
-.BR + ", " =
+.BR +
 Zoom in.
 .TP
 .B \-
 Zoom out.
 .TP
-.B 0
-Set zoom level to 100%.
+.B =
+Set zoom level to 100%, or
+.IR count %.
 .TP
 .B w
 Set zoom level to fit image into window.
-.SS Panning/Moving
+.SS Panning
 .TP
 .BR h ", " Left
-Pan image [move selection] left.
+Pan image 1/5 of window width or
+.I count
+pixel left.
 .TP
 .BR j ", " Down
-Pan image [move selection] down.
+Pan image 1/5 of window height or
+.I count
+pixel down.
 .TP
 .BR k ", " Up
-Pan image [move selection] up.
+Pan image 1/5 of window height or
+.I count
+pixel up.
 .TP
 .BR l ", " Right
-Pan image [move selection] right.
+Pan image 1/5 of window width or
+.I count
+pixel right.
 .TP
 .B H
 Pan to left image edge.
@@ -178,33 +226,34 @@ Rotate image counter-clockwise by 90 degrees.
 .TP
 .B >
 Rotate image clockwise by 90 degrees.
-.SS Control window
+.SS Slideshow
 .TP
-.B W
-Resize window to fit image.
+.B s
+Toggle slideshow.
 .TP
-.B f
-Toggle fullscreen mode.
+.B Ctrl\-'\-'
+Decrease slideshow delay.
+.TP
+.B Ctrl-'+'
+Increase slideshow delay.
+.TP
+.B Ctrl-'='
+Reset slideshow delay to default value, or set it to
+.I count
+seconds.
 .SS Miscellaneous
 .TP
 .B a
 Toggle anti-aliasing.
 .TP
-.B A
-Toggle visibility of alpha-channel, i.e. image transparency.
-.TP
-.B D
-Remove current [selected] image from file list and go to [select] next image.
-.TP
-.B r
-Reload image.
+.B W
+Resize window to fit image.
 .SH MOUSE COMMANDS
-The differences of the following mouse mappings between image view and
-thumbnail mode are denoted via brackets.
+The following mouse mappings are available in image mode:
 .SS Navigate image list
 .TP
 .B Button1
-Go to [select/open] next image.
+Go to next image.
 .TP
 .B Button3
 Go to the previous image.
@@ -221,10 +270,10 @@ Zoom out.
 Drag the image with the mouse while keeping this button pressed down.
 .TP
 .B ScrollUp
-Pan image up [scroll up one thumbnail row].
+Pan image up.
 .TP
 .B ScrollDown
-Pan image down [scroll down one thumbnail row].
+Pan image down.
 .TP
 .B Shift+ScrollUp
 Pan image left.
