Added screen-wise scrolling for thumbnail mode

--- a/sxiv.1
+++ b/sxiv.1
@@ -127,6 +127,12 @@ Move selection up.
 .TP
 .BR l ", " Right
 Move selection right.
+.TP
+.BR Ctrl-j ", " Ctrl-Down
+Scroll thumbnail grid one window height down.
+.TP
+.BR Ctrl-k ", " Ctrl-Up
+Scroll thumbnail grid one window height up.
 .SH IMAGE KEYBOARD COMMANDS
 The following keyboard commands are only available in image mode:
 .SS Navigate image list
