allow sxiv to start as slideshow

--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple (or small or suckless) X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-cdFfhpqrstvZ ]
+.RB [ \-cdFfhpqrsStvZ ]
 .RB [ \-g
 .IR GEOMETRY ]
 .RB [ \-n
@@ -68,6 +68,9 @@ Search the given directories recursively for images to view.
 .TP
 .B \-s
 Scale all images to fit into window.
+.TP
+.B \-S
+Start in slideshow mode.
 .TP
 .B \-t
 Start in thumbnail mode.
