add loop option to slideshow

--- a/sxiv.1
+++ b/sxiv.1
@@ -75,6 +75,10 @@ Start in slideshow mode.
 .br
 .I DELAY
 is the standard delay in seconds (default 5).
+.br
+When more
+.B -S
+are given, slideshow loops forever (i.e. does not stop at the end).
 .TP
 .B \-t
 Start in thumbnail mode.
