Added it_toggle_bar command; default mapping: XK_b

--- a/sxiv.1
+++ b/sxiv.1
@@ -105,6 +105,9 @@ Go to the last image, or image number
 .B f
 Toggle fullscreen mode.
 .TP
+.B b
+Toggle visibility of info bar on bottom of window.
+.TP
 .B A
 Toggle visibility of alpha-channel, i.e. image transparency.
 .TP
