Added horizontal and vertical flip commands

--- a/sxiv.1
+++ b/sxiv.1
@@ -238,6 +238,13 @@ Rotate image counter-clockwise by 90 degrees.
 .TP
 .B >
 Rotate image clockwise by 90 degrees.
+.SS Flip
+.TP
+.B \\\\
+Flip image horizontally.
+.TP
+.B |
+Flip image vertically.
 .SS Slideshow
 .TP
 .B s
