Added a command to refresh the thumbnails

--- a/sxiv.1
+++ b/sxiv.1
@@ -117,6 +117,9 @@ Toggle visibility of alpha-channel, i.e. image transparency.
 .B r
 Reload image.
 .TP
+.B R
+Refresh thumbnails.
+.TP
 .B D
 Remove current image from file list and go to next image.
 .SH THUMBNAIL KEYBOARD COMMANDS
