Simplified & sped up reloading of all thumbnails

--- a/sxiv.1
+++ b/sxiv.1
@@ -118,7 +118,7 @@ Toggle visibility of alpha-channel, i.e. image transparency.
 Reload image.
 .TP
 .B R
-Refresh thumbnails.
+Reload all thumbnails.
 .TP
 .B D
 Remove current image from file list and go to next image.
