Added section CONTRIBUTORS to man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -328,12 +328,15 @@ can also try the following command:
 .RS
 find . \-depth \-type d \-empty ! \-name '.' \-exec rmdir {} \\;
 .RE
-.SH AUTHORS
+.SH AUTHOR
 .EX
-Bert Muennich <ber.t at gmx.com>
-Dave Reisner  <d at falconindy.com>
-Fung SzeTat   <sthorde at gmail.com>
+Bert Muennich   <ber.t at gmx.com>
 .EE
+.SH CONTRIBUTORS
+.EX
+Dave Reisner    <d at falconindy.com>
+Fung SzeTat     <sthorde at gmail.com>
+.EX
 .SH HOMEPAGE
 .TP
 https://github.com/muennich/sxiv
