--- a/sxiv.1
+++ b/sxiv.1
@@ -334,6 +334,7 @@ Bert Muennich   <ber.t at gmx.com>
 .EE
 .SH CONTRIBUTORS
 .EX
+Bastien Dejean  <nihilhill@gmail.com>
 Dave Reisner    <d at falconindy.com>
 Fung SzeTat     <sthorde at gmail.com>
 .EX
