Fixed mail address in man page

--- a/sxiv.1
+++ b/sxiv.1
@@ -334,7 +334,7 @@ Bert Muennich   <ber.t at gmx.com>
 .EE
 .SH CONTRIBUTORS
 .EX
-Bastien Dejean  <nihilhill@gmail.com>
+Bastien Dejean  <nihilhill at gmail.com>
 Dave Reisner    <d at falconindy.com>
 Fung SzeTat     <sthorde at gmail.com>
 .EX
