handle count prefix in thumbnail movements

--- a/sxiv.1
+++ b/sxiv.1
@@ -126,16 +126,24 @@ Remove current image from file list and go to next image.
 The following keyboard commands are only available in thumbnail mode:
 .TP
 .BR h ", " Left
-Move selection left.
+Move selection left
+.I count
+times.
 .TP
 .BR j ", " Down
-Move selection down.
+Move selection down
+.I count
+times.
 .TP
 .BR k ", " Up
-Move selection up.
+Move selection up
+.I count
+times.
 .TP
 .BR l ", " Right
-Move selection right.
+Move selection right
+.I count
+times.
 .TP
 .BR Ctrl-j ", " Ctrl-Down
 Scroll thumbnail grid one window height down.
