--- a/sxiv.1
+++ b/sxiv.1
@@ -197,6 +197,12 @@ Set zoom level to 100%, or
 .TP
 .B w
 Set zoom level to fit image into window.
+.TP
+.B e
+Set zoom level to fit image into the window's width.
+.TP
+.B E
+Set zoom level to fit image into the window's height.
 .SS Panning
 .TP
 .BR h ", " Left
