Slightly changed the doc after merging remote changes

--- a/sxiv.1
+++ b/sxiv.1
@@ -199,10 +199,10 @@ Set zoom level to 100%, or
 Set zoom level to fit image into window.
 .TP
 .B e
-Set zoom level to fit image into the window's width.
+Set zoom level to fit image width to window width.
 .TP
 .B E
-Set zoom level to fit image into the window's height.
+Set zoom level to fit image height to window height.
 .SS Panning
 .TP
 .BR h ", " Left
