New option: -N, set X window resource name

--- a/sxiv.1
+++ b/sxiv.1
@@ -8,6 +8,8 @@ sxiv \- Simple (or small or suckless) X Image Viewer
 .IR GEOMETRY ]
 .RB [ \-n
 .IR NUM ]
+.RB [ \-N
+.IR NAME ]
 .RB [ \-z
 .IR ZOOM ]
 .IR FILE ...
@@ -56,6 +58,9 @@ more information on
 .TP
 .BI "\-n " NUM
 Start at picture number NUM.
+.TP
+.BI "\-N " NAME
+Set the resource name of sxiv's X window to NAME.
 .TP
 .B \-h
 Print brief usage information to standard output and exit.
