--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-bcdFfhpqrstvZ ]
+.RB [ \-bcdFfhiopqrstvZ ]
 .RB [ \-g
 .IR GEOMETRY ]
 .RB [ \-n
@@ -16,13 +16,6 @@ sxiv \- Simple X Image Viewer
 .SH DESCRIPTION
 sxiv is a simple image viewer for X. It only has the most basic features
 required for fast image viewing.
-.P
-sxiv opens all named
-.IR FILE s,
-or reads the names of the files to open from standard input, if only a single
-hyphen\-minus
-.RB ( \- )
-is given.
 .P
 sxiv has two modes of operation: image and thumbnail mode. The default is image
 mode, in which only the current image is shown. In thumbnail mode a grid of 
@@ -64,6 +57,14 @@ Set the resource name of sxiv's X window to NAME.
 .TP
 .B \-h
 Print brief usage information to standard output and exit.
+.TP
+.B \-i
+Read names of files to open from standard input.
+.TP
+.B \-o
+Write list of opened files to standard output when quitting. If combined with
+.IR \-i ,
+then sxiv acts as a visual filter/pipe.
 .TP
 .B \-p
 Pixelize images, i.e. turn off anti-aliasing.
