Handle 180 degrees image rotation

--- a/sxiv.1
+++ b/sxiv.1
@@ -261,6 +261,9 @@ Rotate image counter-clockwise by 90 degrees.
 .TP
 .B >
 Rotate image clockwise by 90 degrees.
+.TP
+.B ?
+Rotate image by 180 degrees.
 .SS Flip
 .TP
 .B \\\\
