Added a command line switch for turning on "Show transparency as white" by default.

--- a/sxiv.1
+++ b/sxiv.1
@@ -26,7 +26,10 @@ for information on how to enable this feature.
 .P
 Please note, that the fullscreen mode requires an EWMH/NetWM compliant window
 manager.
-.SH OPTIONS
+.SH options
+.TP
+.B \-A
+Show transparency as white by default.
 .TP
 .B \-b
 Do not show info bar on bottom of window.
