Only print marked files when -o is given
Fallback to print all files, if no images are marked, was kind of
irritating.

--- a/sxiv.1
+++ b/sxiv.1
@@ -62,10 +62,10 @@ Print brief usage information to standard output and exit.
 Read names of files to open from standard input.
 .TP
 .B \-o
-Write list of all marked files, or all opened files if no files are marked, to
-standard output when quitting. If combined with
-.IR \-i ,
-then sxiv acts as a visual filter/pipe.
+Write list of all marked files to standard output when quitting. In combination
+with
+.I \-i
+sxiv can be used as a visual filter/pipe.
 .TP
 .B \-p
 Pixelize images, i.e. turn off anti-aliasing.
