Fast recursive mode for image loading
Add new command line option (-R) for fast recursive image loading.
This new mode doesn't care about the sorting, and instead opens the
first image OS gives through directory read function.

Rest of the images will be then loaded in background, giving instant
startup.

The purpose for this mode is to be used with directories that contains
_lots_ of images for instant viewing.

--- a/sxiv.1
+++ b/sxiv.1
@@ -70,6 +70,10 @@ sxiv can be used as a visual filter/pipe.
 .B \-q
 Be quiet, disable warnings to standard error stream.
 .TP
+.B \-R
+Read images from given directories recursively on the fly.
+This mode reads the images in order as the OS gives them, so there is no sorting involed.
+.TP
 .B \-r
 Search the given directories recursively for images to view.
 .TP
