--- a/sxiv.1
+++ b/sxiv.1
@@ -130,6 +130,9 @@ Remove current image from file list and go to next image.
 .B m
 Mark/unmark the current image.
 .TP
+.B M
+Reverse marked images.
+.TP
 .B N
 Go
 .I count
