Read the names of the marked files from a file

--- a/sxiv.1
+++ b/sxiv.1
@@ -8,6 +8,8 @@ sxiv \- Simple X Image Viewer
 .IR GAMMA ]
 .RB [ \-g
 .IR GEOMETRY ]
+.RB [ \-m
+.IR FILE ]
 .RB [ \-N
 .IR NAME ]
 .RB [ \-n
@@ -53,6 +55,9 @@ Set image gamma to GAMMA (-32..32).
 Set window position and size. See section GEOMETRY SPECIFICATIONS of X(7) for
 more information on
 .IR GEOMETRY .
+.TP
+.BI "\-m " FILE
+Read the names of the marked files from FILE.
 .TP
 .BI "\-N " NAME
 Set the resource name of sxiv's X window to NAME.
