Removed command line option -F

--- a/sxiv.1
+++ b/sxiv.1
@@ -3,7 +3,7 @@
 sxiv \- Simple X Image Viewer
 .SH SYNOPSIS
 .B sxiv
-.RB [ \-bcFfhioqrtvZ ]
+.RB [ \-bcfhioqrtvZ ]
 .RB [ \-G
 .IR GAMMA ]
 .RB [ \-g
@@ -39,10 +39,6 @@ Do not show info bar on bottom of window.
 .TP
 .B \-c
 Remove all orphaned cache files from the thumbnail cache directory and exit.
-.TP
-.B \-F
-Make the window fixed/floating by setting the minimum and maximum width/height
-size-hints to the window width/height.
 .TP
 .B \-f
 Start in fullscreen mode.
